fixed checkout fontsize too big

--- a/src/styles/Checkout.scss
+++ b/src/styles/Checkout.scss
@@ -4,7 +4,10 @@
   background-color: white;
   height: max-content;
   /* justify-content: center; */
-  margin-top: 100px;
+  margin-top: 50px;
+  h2 {
+    font-size: 1.2em;
+  }
 
 }
 .checkout__title {
