--- a/src/styles/CheckoutProduct.scss
+++ b/src/styles/CheckoutProduct.scss
@@ -5,25 +5,38 @@
 }
 .checkoutProduct__image {
   object-fit: contain;
-  width: 180px;
-  height: 180px;
+  width: 100px;
+  height: 100px;
+  max-width: 40%;
 }
 .checkoutProduct__info {
   padding-left: 20px;
 
 }
 .checkoutProduct__title {
-  font-size: 17px;
-  font-weight: 800;
+  font-size: 13px;
+  font-weight: 600;
 }
 .checkoutProduct__rating {
   display: flex;
+  font-size: 0.6em;
+}
+.checkoutProduct__price {
+  display: flex;
+  // justify-content: center;
+  // align-items: center;
+  p {
+    margin-right: 10px;
+    font-size: 15px;
+    font-weight: 500;
+  }
 }
 .checkoutProduct__info > button {
   background-color: #f0c14b;
   border: 1px solid;
   margin-top: 10px;
   padding: 3px;
+  font-size: 0.7em;
   border-color: #a88734 #9c7e31 #846a29;
   color: #111;
   outline: none;
